--- a/public/styles/_header.scss
+++ b/public/styles/_header.scss
@@ -34,11 +34,11 @@
 	&:hover,
 	&:hover:active,
 	&.open {
-		color: $red;
+		color: $primary;
 
 		.menu-icon {
 			span {
-				background-color: $red;
+				background-color: $primary;
 			}
 		}
 	}
@@ -143,7 +143,7 @@
 	@include media-breakpoint-down(md){
 		display: none;
 		margin: 0;
-		background: transparentize($grey-light, 0.15);
+		background: transparentize($black, 0.5);
 		backdrop-filter: blur(10px);
 
 		&.open {
@@ -151,7 +151,7 @@
 				flex-direction: column;
 				flex-wrap: wrap;
 				justify-content: flex-end;
-			padding-bottom: $space-xxxl;
+			padding-bottom: $space-xxxl*2.5;
 			position: fixed;
 				top: $space-xxxl;
 				bottom: 0;
@@ -163,7 +163,7 @@
 		.menu-item {
 			display: block;
 			transition-duration: 0.3s;
-			border-bottom: 1px solid lighten($grey-light, 5%);
+			border-bottom: 1px solid $gray-700;
 			text-align: center;
 
 			a {
