--- a/public/styles/_layout.scss
+++ b/public/styles/_layout.scss
@@ -4,7 +4,6 @@
 
 body {
 	min-width: 320px;
-	padding-top: $space-xxl;
 
 	&.menu-open {
 		position: absolute;
@@ -23,7 +22,7 @@ body {
 		left: 0;
 		right: 0;
 		z-index: 10;
-	background: transparentize($grey-darkest, 0.2);
+	background: transparentize($black, 0.2);
 	backdrop-filter: blur(3px);
 
 	.header-inner {
