- Fixed grammar issue

--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -284,7 +284,7 @@
 			<div class="text-left">
 				<div class="header">
 					<span class="pre-title">If you want to</span>
-					<h2 class="title">get in touch.</h2>
+					<h2 class="title">get in touch</h2>
 				</div>
 			</div>
 
