--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -101,6 +101,7 @@
 		</div>
 		
 		<div class="hero-inner hero-inner-secondary">
+		<div id="about"></div>
 			<div class="container width-narrow">
 				<div>
 					<span>I'm a</span>
@@ -114,7 +115,8 @@
 		</div>
 	</section>
 
-	<section id="about" class="section section-about" data-anchor="true">
+	
+	<section class="section section-about" data-anchor="true">
 		<div class="section-inner container width-narrow text-center">
 			<div class="row">
 				<div class="col-12">
@@ -281,11 +283,9 @@
 
 	<section id="contact" class="section section-contact" data-anchor="true">
 		<div class="section-inner container width-narrow">
-			<div class="text-left">
-				<div class="header">
-					<span class="pre-title">If you want to</span>
-					<h2 class="title">get in touch</h2>
-				</div>
+			<div class="header">
+				<span class="pre-title">If you want to</span>
+				<h2 class="title">say hello</h2>
 			</div>
 
 {#			<form id="say-hello">#}
