--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -75,6 +75,10 @@
                     </a>
 
                     <ul id="nav-primary" class="menu">
+                        <li class="menu-item hidden-md-up">
+                            <a href="#" onclick="UI.scrollToTop(); UI.dismissMenu(); return false;">Home</a>
+                        </li>
+
                         <li class="menu-item">
                             <a href="#about" onclick="UI.dismissMenu();">About</a>
                         </li>
