--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -337,12 +337,24 @@
 
 				<div class="item item-social">
 					<div class="item-inner">
+						<a aria-label="Github" href="https://society6.com/refreshink" class="item-content" rel="noreferrer" target="_blank">
+							<div class="wrapper-icon">
+								<span class="icon icon-cart"></span>
+							</div>
+
+							<p>Shop <b>artwork</b></p>
+						</a>
+					</div>
+				</div>
+
+				<div class="item item-social">
+					<div class="item-inner">
 						<a aria-label="Github" href="https://instagram.com/refresh.ink" class="item-content" rel="noreferrer" target="_blank">
 							<div class="wrapper-icon">
 								<span class="icon icon-instagram"></span>
 							</div>
 
-							<p>See my <b>artwork</b></p>
+							<p>View <b>artwork</b></p>
 						</a>
 					</div>
 				</div>
