- Fixing .htaccess file so that child pages work as intended - Updated about text and added toggle button functionality - Added new brand tiles, refined brand tile styling - Removing Case studies route

--- a/public/styles/_typography.scss
+++ b/public/styles/_typography.scss
@@ -74,3 +74,8 @@
 
 // BG Colours
 .bg-primary, .bg-red	{ background-color: $primary!important; }
+
+// Font Families
+.font-standard			{ font-family: $font-standard!important; }
+.font-serif				{ font-family: $font-serif!important; }
+.font-accent			{ font-family: $font-accent!important; }
