--- a/public/styles/_elements.scss
+++ b/public/styles/_elements.scss
@@ -75,6 +75,32 @@
 		}
 	}
 
+	.hero-inner-static {
+		background: $grey-medium;
+		position: absolute;
+			left: 0;
+			right: 0;
+			z-index: 0;
+		height: 300px;
+		display: flex;
+			flex-direction: row;
+			flex-wrap: nowrap;
+		overflow: hidden;
+
+		.colour-band {
+			content: ' ';
+			background: $red;
+			width: 100%;
+			height: 50%;
+			position: absolute;
+				bottom: -45%;
+				z-index: 2;
+				width: 110%;
+			// animation: 100s infinite ease-in-out moveColourBand;
+			transform: rotate(-4deg)
+		}
+	}
+
 	.hero-inner-primary {
 		padding: $space-xxxl * 2 0 $space-xxl;
 		position: relative;
