- Updating about text - Changed how button text is set for about text - Adding additional projects to work samples

--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -11,7 +11,19 @@
 			is fully responsive, accessible and fast. If you don't believe me, run a Lighthouse report on it :D",
 		"url": "https://sokolocal.com",
 		"tasks": [
-			"UX", "Design", "HTML5", "SCSS", "CSS3", "JS", "jQuery", "Twig", "Symfony"
+			"UX", "Design", "HTML5", "SCSS", "CSS3", "JS", "jQuery", "AngularJS", "Symfony", "Twig", "React Native"
+		]
+	},
+	{
+		"title": "Homewood Health - Sentio",
+		"image": "/images/projects/sentio.png",
+		"description":
+			"As the understanding and importance of mental health continues to grow, the Homewood Health team approached us to help
+            design and build not only the public facing site for Sentio - an online tool to help improve mental health and tackle symptoms 
+            of depression but also the web applications for the client treatment portal and content publishing suite and a native mobile application. ",
+		"url": "https://sentioapp.com/",
+		"tasks": [
+			"UX", "Design", "HTML5", "SCSS", "CSS3", "JS", "jQuery", "AngularJS", "Twig", "Symfony", "ContentBuilderJS", "React Native"
 		]
 	},
 	{
@@ -36,6 +48,17 @@
 		"url": "https://justpickup.ca",
 		"tasks": [
 			"Concept Design", "Wire-framing", "Design", "HTML5", "CSS3", "JS", "jQuery", "AngularJS", "Symfony", "Twig"
+		]
+	},
+	{
+		"title": "Meticulon",
+		"image": "/images/projects/meticulon.png",
+		"description": "Working with the Meticulon team to create their Assessment portal has been an incredibly rewarding experience. This web
+                        applicaiton allows parents and mentors to help participants with Autism across Western Canada through their career
+                        by providing coaching through KPI's to improve their employability.",
+		"url": "https://meticulon-labs.com/login",
+		"tasks": [
+			"Concept Design", "Wire-framing", "Design", "UX", "HTML5", "SCSS", "CSS3", "jQuery", "AngularJS", "PHP", "Symfony", "Twig"
 		]
 	},
 	{
@@ -159,11 +182,11 @@
 						</div>
 
 						<p class="h5 text-center font-accent mt-2">Need more details?</p>
-						<p>Most of the work I do in my current role involves creating both public facing and protected experiences and given the nature of those projects and sensitivity of client data. Please don't hesitate to <a href="#contact">say hello</a> for more information.</p>
+						<p>Most of the work I do in my current role involves creating both public facing and protected experiences and given the nature of those projects and sensitivity of client data I'm not able to publish a folio of designs online. Please don't hesitate to <a href="#contact">say hello</a> for examples of work and more information.</p>
 					</div>
 
 					<div class="content">
-						<p><button class="btn btn-sm btn-secondary" role="button" onclick="UI.toggleMoreText(this);" data-target=".about-more">Read More</button></p>
+						<p><button class="btn btn-sm btn-secondary" role="button" onclick="UI.toggleMoreText(this);" data-target=".about-more" data-more="Current Role &amp; Accomplishments" data-less="Show Less">Current Role &amp; Accomplishments</button></p>
 					</div>
 				</div>
 			</div>
