- Spelling and grammar updates

--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -54,8 +54,8 @@
 		"title": "Meticulon",
 		"image": "/images/projects/meticulon.png",
 		"description": "Working with the Meticulon team to create their Assessment portal has been an incredibly rewarding experience. This web
-                        applicaiton allows parents and mentors to help participants with Autism across Western Canada through their career
-                        by providing coaching through KPI's to improve their employability.",
+                        application allows parents and mentors to help participants with Autism across Western Canada through their career
+                        by providing coaching through KPI's to improve their employ-ability.",
 		"url": "https://meticulon-labs.com/login",
 		"tasks": [
 			"Concept Design", "Wire-framing", "Design", "UX", "HTML5", "SCSS", "CSS3", "jQuery", "AngularJS", "PHP", "Symfony", "Twig"
@@ -66,7 +66,7 @@
 		"image": "/images/projects/just-beer.png",
 		"description": "An oldie but a goodie, and who doesn't love beer! JustBeer is an excellent example of an internal project
 						that a passionate small group of people including myself turned into a successful online community and resource
-						with a companion iPhone and Android app that challange UX norms to provide the best experience for discovering
+						with a companion iPhone and Android app that challenge UX norms to provide the best experience for discovering
 						all things beer.",
 		"url": "https://justbeerapp.com",
 		"tasks": [
@@ -314,6 +314,7 @@
 						<li><p>PHP</p> <p>9<sub>/10</sub></p></li>
 						<li><p>Twig</p> <p>9<sub>/10</sub></p></li>
 						<li><p>Symfony</p> <p>8<sub>/10</sub></p></li>
+						<li><p>C++/C#</p> <p>4<sub>/10</sub></p></li>
 					</ul>
 				</div>
 
